--- a/public/index.html
+++ b/public/index.html
@@ -11,17 +11,17 @@
     <div class="container-fluid">
       <div class="container">
         <div class="row">
-          <div class="col-md-12 mt-5">
+          <div id="niark" class="col-md-12 mt-5">
             Remplacer ce text par le contenu du fichier "ajax/content.html".
           </div>
         </div>
         <div class="row">
-          <div class="col-md-8 mt-2">
+          <div id="choubi" class="col-md-8 mt-2">
             Remplacer ce text par le contenu fichier "ajax/delay5.html" dans <span data-timer>5</span> secondes.
           </div>
           <div class="col-md-4 mt-2">
-            <p>Au clique du boutton, remplacer ce text et le boutton par le contenu fichier "ajax/info.html".</p>
-            <button type="button" class="btn btn-primary">Afficher les infos</button>
+            <p id='douba'>Au clique du boutton, remplacer ce text et le boutton par le contenu fichier "ajax/info.html".</p>
+            <button id="doubi" type="button" class="btn btn-primary">Afficher les infos</button>
           </div>
         </div>
         <div class="row">
@@ -29,7 +29,7 @@
             <form class="bg-light p-2 rounded" onsubmit="event.preventDefault()">
               <div class="form-group">
                 <label for="inputName">Nom</label>
-                <input value="Mon nom" type="text" class="form-control" id="inputName" aria-describedby="emailHelp" placeholder="Entrer un nom">
+                <input name="name" value="Mon nom" type="text" class="form-control" id="inputName" aria-describedby="emailHelp" placeholder="Entrer un nom">
               </div>
               <div class="form-check">
                 <input class="form-check-input" type="radio" name="sex" id="sex1" value="1" checked>
@@ -51,7 +51,7 @@
                   <option value="3">FullStack</option>
                 </select>
               </div>
-              <button type="submit" class="btn btn-primary">Envoyer</button>
+              <button id="gnar" type="submit" class="btn btn-primary">Envoyer</button>
             </form>
           </div>
           <div class="col-md-6 mt-4">
@@ -64,11 +64,11 @@
             <div class="bg-light p-2 rounded">
               <h3>Heure</h3>
               <div class="time">
-                <div class="units" data-hours></div>
+                <div id="hours" class="units" data-hours></div>
                 <div class="separator">:</div>
-                <div class="units" data-minutes></div>
+                <div id="minutes" class="units" data-minutes></div>
                 <div class="separator">:</div>
-                <div class="units" data-secondes></div>
+                <div id="seconds" class="units" data-secondes></div>
               </div>
             </div>
           </div>
@@ -76,11 +76,11 @@
             <div class="bg-light p-2 rounded">
               <h3>Heure dans une seconde</h3>
               <div class="time">
-                <div class="units"></div>
+                <div id="hour" class="units"></div>
                 <div class="separator">:</div>
-                <div class="units"></div>
+                <div id="minute" class="units"></div>
                 <div class="separator">:</div>
-                <div class="units"></div>
+                <div id="seconde" class="units"></div>
               </div>
             </div>
           </div>
